k8s/game-project/templates/networkPolicy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: game-project
spec:
  podSelector: {}
  policyTypes:
    - Ingress
